--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let socket = io.connect("http://localhost:5000");
+      let socket = io.connect("https://open-board-delta.vercel.app/"); // "http://localhost:5000");
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
